# ChangeLog for x11-libs/cairo
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.118 2007/05/07 19:37:35 dang Exp $

  07 May 2007; Daniel Gryniewicz <dang@gentoo.org> cairo-1.4.4.ebuild:
  Marked stable on amd64 for bug #176367

  03 May 2007; Jeroen Roovers <jer@gentoo.org> cairo-1.4.4.ebuild:
  Stable for HPPA (bug #176367).

  01 May 2007; Markus Rothe <corsair@gentoo.org> cairo-1.4.4.ebuild:
  Stable on ppc64; bug #176367

  30 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> cairo-1.4.4.ebuild:
  Stable on sparc wrt #176367

  29 Apr 2007; Raúl Porcel <armin76@gentoo.org> cairo-1.4.4.ebuild:
  ia64 + x86 stable wrt #176367

  28 Apr 2007; nixnut <nixnut@gentoo.org> cairo-1.4.4.ebuild:
  Stable on ppc wrt bug 176367

*cairo-1.4.4 (15 Apr 2007)

  15 Apr 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.4.4.ebuild:
  revbump from upstream. reduces malloc calls. cleans up cases when malloc
  fails. cleans up other assorted bugs.

  21 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> cairo-1.2.6.ebuild:
  Stable on alpha/ia64 wrt bug #167573.

*cairo-1.4.2 (20 Mar 2007)

  20 Mar 2007; Doug Goldstein <cardoe@gentoo.org> -cairo-1.0.2.ebuild,
  -cairo-1.3.10.ebuild, -cairo-1.3.12.ebuild, -cairo-1.3.14.ebuild,
  -cairo-1.3.16.ebuild, +cairo-1.4.2.ebuild:
  Rev bump to 1.4.2. Remove old experimental versions.

*cairo-1.4.0 (06 Mar 2007)

  06 Mar 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.4.0.ebuild:
  bump to latest stable upstream release

*cairo-1.3.16 (03 Mar 2007)

  03 Mar 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.3.16.ebuild:
  rev bump to 1.4.0 release candidate

  22 Feb 2007; Jason Wever <weeve@gentoo.org> cairo-1.2.6.ebuild:
  Stable on SPARC wrt bug #167573.

  21 Feb 2007; Daniel Gryniewicz <dang@gentoo.org> cairo-1.2.6.ebuild:
  Marked stable on amd64 for bug #167573

  20 Feb 2007; Markus Rothe <corsair@gentoo.org> cairo-1.2.6.ebuild: