@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+<herd>no-herd</herd>
 <maintainer>
   <email>cardoe@gentoo.org</email>
   <name>Doug Goldstein</name>
