@@ -1,6 +1,14 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.118 2007/05/07 19:37:35 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.120 2007/05/15 14:25:09 bangert Exp $
+
+  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
+  add <herd>no-herd</herd>
+
+*cairo-1.4.6 (09 May 2007)
+
+  09 May 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.4.6.ebuild:
+  rev bump
 
   07 May 2007; Daniel Gryniewicz <dang@gentoo.org> cairo-1.4.4.ebuild:
   Marked stable on amd64 for bug #176367
